--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
 	"description": "Full stack React and Node application that implements the Spotify API",
 	"main": "server.js",
 	"scripts": {
-		"start": "if-env NODE_ENV===production && npm run start:prod || npm run start:dev",
+		"start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
 		"start:prod": "node server",
 		"client": "cd client && npm start",
 		"start:dev": "concurrently \"npm run client\" \"nodemon server\"",
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"install": "cd client && npm install",
 		"build": "cd client && npm run build",
 		"heroku-postbuild": "npm run build"
@@ -29,6 +28,7 @@
 		"if-env": "^1.0.4"
 	},
 	"devDependencies": {
-		"concurrently": "^5.3.0"
+		"concurrently": "^5.3.0",
+		"nodemon": "^2.0.6"
 	}
 }
