--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
 	},
 	"homepage": "https://github.com/code-guy21/MySpotify#readme",
 	"dependencies": {
+		"cookie-parser": "^1.4.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
-		"if-env": "^1.0.4"
+		"express-async-handler": "^1.1.4",
+		"if-env": "^1.0.4",
+		"querystring": "^0.2.0"
 	},
 	"devDependencies": {
 		"concurrently": "^5.3.0",
